# nRF5

./: .gitignore  notes.md
apps/: CMakeLists.txt
apps/app_timer_repro/: .gdbinit  CMakeLists.txt
apps/app_timer_repro/include/: app_config.h
apps/app_timer_repro/src/: main.c
apps/app_timer_repro/support/: ble_app_uart_gcc_nrf52.ld  nrf_mesh_config_app.h  sdk_config.h
apps/archived/gateway/: Makefile
apps/beacon/: Makefile
apps/beacon/src/: custom_log.c  main.c
apps/beacon/support/: ble_app_uart_gcc_nrf52.ld  sdk_config.h
apps/ble_sandbox/: Makefile
apps/ble_sandbox/src/: main.c
apps/blinky/: Makefile
apps/blinky/src/: main.c
apps/endpoint/: .gdbinit  CMakeLists.txt  Makefile
apps/endpoint/include/: app_config.h
apps/endpoint/src/: main.c
apps/endpoint/support/: nrf_mesh_config_app.h  sdk_config.h
apps/gateway/: .gdbinit  CMakeLists.txt  Makefile
apps/gateway/include/: address_book.h  app_config.h  app_state.h  configurator.h  ecare_client.h  ecare_common.h  protocol.h  protocol_config_client.h  protocol_internal.h  provisioner.h  ring_packet_queue.h
apps/gateway/src/: address_book.c  app_state.c  configurator.c  ecare_client.c  ecare_server.c  lsm9ds1.c  main.c  protocol.c  protocol_common.c  protocol_config_client.c  protocol_usb.c  provisioner.c  (+2 more)
apps/relay/: .gdbinit  CMakeLists.txt  Makefile
apps/sensor/: Makefile
apps/wristband/: .gdbinit  Makefile
console/: checker.py  command_processor.py  display.py  main.py  plotter.py  processor.py  requirements.txt  status_processor.py
console/request_transformers/: basic.py  config_client.py
data/: heading_plot.py  plot.py  rssi_calib.nb
data/trial_1/: 05m  10m  15m  20m  25m  30m  35m  40m  45m  50m
data/trial_3/: 1m  1m.csv  1mh  1mh.csv  2m  2m.csv  2mh  2mh.csv  3m  3m.csv  3mh  3mh.csv  4m  4m.csv  4mh  4mh.csv  5m  5m.csv  5mh  5mh.csv
mesh_sdk/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md
mesh_sdk/CMake/: Board.cmake  FindSDK.cmake  GenerateSESProject.cmake  SoftDevice.cmake  mesh.lnt
mesh_sdk/doc/: OVERVIEW.md
mesh_sdk/examples/: CMakeLists.txt  README.md  experimental_examples.md
mesh_sdk/scripts/: README.md
tools/mergehex/: mergehex
tools/nrfjprog/: libhighlevelnrfjprog.dylib  nrfjprog
tools/sniffer/: sniffer.py
(+487 files in other folders)
